   * added a new experimental gui engine available when starting with
     --new-widgets. The engine doesn't do much yet.
 * user interface:
   * placement of the counters and displays of the top panel optimized
   * new history feature for entering searches, chat messages, commands, and
     AI formulas
   * optional cancelling of unit orders in load-game dialog (patch #1024)
   * smarter pathfinding: if same MP cost, prefer terrains with better defense.
 * language and i18n:
   * new translation: Croatian
   * updated translations: Chinese, Czech, Danish, Dutch, Finnish, French,
     Galician, German, Greek, Hungarian, Italian, Lithuanian, Japanese, Polish,
     Russian, Serbian, Slovak, Spanish, Swedish, Turkish, Valencian
   * updated fonts: DejaVuSans 2.24
 * map editor:
   * Fixed not working "Update transition" and make "Delay transition update"
     directly trigger an update when toggled off.
   * add-ons can now make their custom terrains available in the editor
   * Draw base terrain under an overlay when ALT is pressed
   * Implemented adjustable lighting levels (time of day)
     (debian bug #458305 / gna bug #11408)
 * game engine
   * Implemented lazy loading for unit_types
 * multiplayer:
   * Removed Wesbowl
   * Merged 4p A New Land by Bob_the_Mighty
 * WML engine:
   * new tag [insert_tag] to place dynamic WML content
   * Fixed most C++ probes for boolean WML attributes to use 
     utils::string_bool() rather than true/false or yes/no string comparisons;
     as a result, they should accept true non-zero values, "on", "yes" or "true"
     strings; and "0", "off", "no" or "false" are considered false values.
   * A variable string's length can now be obtained with [set_variable] 
     string_length=
   * Implemented [variable] boolean_not_equals= for simmetry with [variable]
     boolean_equals=
   * Implemented [store_map_dimensions], which saves the map size in a variable
     with values 'height' and 'width'