@@ -18,7 +18,8 @@ Version 1.5.0-svn:
    * Merged 4p A New Land by Bob_the_Mighty
 
  * User interface:
-   * Smarter pathfinding: if same MP cost, prefer terrains with better defense.
+   * Smarter pathfinding: if same MP cost, prefer terrains with better defense
+     and empty hexes (less frequent multi-turn moves blocked by a friend)
 
 Version 1.4:
   * Language and translations
